--- a/Source/SmallSolarsStuffed/SmallSolarsStuffed.csproj
+++ b/Source/SmallSolarsStuffed/SmallSolarsStuffed.csproj
@@ -32,8 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>Source-DLLs\Assembly-CSharp.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\RimWorld1232WinDev_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -42,19 +41,17 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine">
-      <HintPath>Source-DLLs\UnityEngine.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>..\..\..\..\RimWorld1232WinDev_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Building_StuffedPowerPlantSolarSingle.cs" />
-    <Compile Include="Building_StuffedPowerPlantSolarMini.cs" />
-    <Compile Include="Building_StuffedPowerPlantSolarMicro.cs" />
+    <Compile Include="CompPowerPlantSingleSolar.cs" />
+    <Compile Include="CompPowerPlantMiniSolar.cs" />
+    <Compile Include="CompPowerPlantMicroSolar.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Source-DLLs\Assembly-CSharp.dll" />
-    <Content Include="Source-DLLs\UnityEngine.dll" />
+    <Folder Include="Source-DLLs\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
